03-kubernetes/manifests/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  selector:
    app: hello
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
